Push di gibbus del 14/16 Ho risolto i bug di inserimento delle persone e ho aggiunto la funzionalità che segna se una persona non ha pagato le quote quando viene inserita